--- a/build.gradle
+++ b/build.gradle
@@ -1,19 +1,13 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     repositories {
         google()
         mavenCentral()
+        mavenLocal()
         maven { url 'https://jitpack.io' }
-        maven {
-            url uri('./localRepo')
-        }
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.2.0"
-        classpath "top.niunaijun.blackobfuscator:plugin:1.0.0"
-        classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath 'com.android.tools.build:gradle:7.3.1'
+        classpath "top.niunaijun.blackobfuscator:plugin:1.0.2"
     }
 }
 
@@ -21,15 +15,10 @@ allprojects {
     repositories {
         google()
         mavenCentral()
-        jcenter() // Warning: this repository is going to shut down soon
-        maven {
-            url uri('./localRepo')
-        }
         maven { url 'https://jitpack.io' }
     }
 }
 
-
-task clean(type: Delete) {
+tasks.register('clean', Delete) {
     delete rootProject.buildDir
 }
