--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,13 +4,11 @@ plugins {
 }
 
 android {
-    compileSdkVersion 30
-    buildToolsVersion "30.0.0"
-
+    compileSdk 33
     defaultConfig {
         applicationId "top.niunaijun.blackobfuscator.asplugin"
-        minSdkVersion 21
-        targetSdkVersion 30
+        minSdk 23
+        targetSdk 33
         versionCode 1
         versionName "1.0"
 
@@ -56,7 +54,6 @@ BlackObfuscator {
 }
 
 dependencies {
-
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
