--- a/plugin/build.gradle
+++ b/plugin/build.gradle
@@ -1,12 +1,11 @@
 apply plugin: 'groovy'
-//apply plugin: 'maven'
-apply plugin: 'com.github.dcendents.android-maven'
+apply plugin: 'maven-publish'
 
-group='top.niunaijun.blackobfuscator'
 dependencies {
-    implementation "com.android.tools.build:gradle:3.3.1"
-    implementation "com.android.tools.build:transform-api:1.5.0"
-    implementation "commons-io:commons-io:2.5"
+    implementation "com.android.tools.build:gradle:7.3.1"
+    implementation "com.android.tools.build:transform-api:+"
+    implementation "commons-io:commons-io:+"
+
     //gradle sdk
     implementation gradleApi()
     //groovy sdk
@@ -16,22 +15,16 @@ dependencies {
 
 repositories {
     mavenCentral()
-    maven {
-        url uri('localRepo')
-    }
+    mavenLocal()
 }
 
-group='top.niunaijun.blackobfuscator'
-version='1.0.0'
-//uploadArchives {
-//    repositories {
-//        mavenDeployer {
-//            //提交到远程服务器：
-//            // repository(url: "http://www.xxx.com/repos") {
-//            //    authentication(userName: "admin", password: "admin")
-//            // }
-//            //本地的Maven地址设置为E:/Maven
-//            repository(url: uri('../localRepo'))
-//        }
-//    }
-//}
+publishing {
+    publications {
+        release(MavenPublication) {
+            from components.java
+            groupId 'top.niunaijun.blackobfuscator'
+            artifactId 'plugin'
+            version "1.0.2"
+        }
+    }
+}
