--- a/gradle.properties
+++ b/gradle.properties
@@ -15,3 +15,29 @@ org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
 # Android operating system, and which are packaged with your app"s APK
 # https://developer.android.com/topic/libraries/support-library/androidx-rn
 android.useAndroidX=true
+#
+# \u670D\u52A1\u5668\u5730\u5740
+SONATYPE_HOST=S01
+# \u53D1\u5E03\u7EC4\u4EF6\u65F6\u662F\u5426\u7B7E\u540D
+RELEASE_SIGNING_ENABLED=true
+#
+GROUP=com.gitee.tiamosu
+POM_ARTIFACT_ID=obfuscator-plugin
+VERSION_NAME=1.0.0
+#
+POM_NAME=BlackObfuscator-ASPlugin
+POM_DESCRIPTION=An Android plugin.
+POM_INCEPTION_YEAR=2023
+POM_URL=https://github.com/tiamosu/BlackObfuscator-ASPlugin/
+#
+POM_LICENSE_DIST=repo
+POM_LICENSE_NAME=The Apache Software License, Version 2.0
+POM_LICENSE_URL=https://www.apache.org/licenses/LICENSE-2.0.txt
+#
+POM_SCM_URL=https://github.com/tiamosu/BlackObfuscator-ASPlugin/
+POM_SCM_CONNECTION=scm:git:git://github.com/tiamosu/BlackObfuscator-ASPlugin.git
+POM_SCM_DEV_CONNECTION=scm:git:ssh://github.com/tiamosu/BlackObfuscator-ASPlugin.git
+#
+POM_DEVELOPER_ID=tiamosu
+POM_DEVELOPER_NAME=tiamosu
+POM_DEVELOPER_URL=https://github.com/tiamosu/
